--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"keywords": ["contao", "animsition", "page", "transition"],
 	"type": "contao-bundle",
 	"homepage": "http://www.inspiredminds.at",
-	"license": "LGPL-3.0+",
+	"license": "LGPL-3.0-or-later",
 	"authors": [
 		{
 			"name": "Fritz Michael Gschwantner",
